--- a/app/index.html
+++ b/app/index.html
@@ -13,9 +13,13 @@
   <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="lib/underscore/underscore.js"></script>
   <script src="lib/angular/angular.js"></script>
+  <script src="lib/angular/angular-mocks.js"></script>
   <script src="lib/angular-ui-router/angular-ui-router.js"></script>
   <script src="lib/restangular/restangular.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/e2e-mock.js"></script>
+  <script src="js/todo-service.js"></script>
   <script src="js/main-ctrl.js"></script>
+  <script src="js/edit-ctrl.js"></script>
 </body>
 </html>
